--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-cayman
+
+title: College Majors Research
+
+description: The purpose of this cite is to explore different ways to represent information about women in the college 
+majors they choose.  
